--- a/SalesWebMvc/Views/Sellers/Details.cshtml
+++ b/SalesWebMvc/Views/Sellers/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SalesWebMvc.Models.Seller
+
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h3>Are you sure you want delete this??</h3>
 
 <div>
     <h4>Seller</h4>
@@ -37,10 +37,16 @@
         <dd class="col-sm-11">
             @Html.DisplayFor(model => model.BaseSalary)
         </dd>
+
+        <dt class="col-sm-1">
+            @Html.DisplayNameFor(model => model.Department)
+        </dt>
+        <dd class="col-sm-11">
+            @Html.DisplayFor(model => model.Department.Name)
+        </dd>
     </dl>
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" class="btn btn-danger" value="Delete" />
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Edit</a>
         <a asp-action="Index" >Back to list</a>
-    </form>
+    </div>
 </div>
