--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -32,7 +32,8 @@
                 <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-secondary" value="Edit" />
+                <input type="submit" class="btn btn-secondary" value="Save" />
+                <a asp-action="Index">Back to list</a>
             </div>
         </form>
     </div>
