--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -1,7 +1,77 @@
-﻿@model SalesWebMvc.Models.SalesRecord
+﻿@model IEnumerable<SalesWebMvc.Models.SalesRecord>
 
 @{
     ViewData["Title"] = "Simple Search";
 }
 
 <h2>@ViewData["Title"]</h2>
+
+
+<nav class="navbar navbar-expand-lg m-3 navbar-dark bg-success">
+    <span class="navbar-brand mb-0 h1">Search</span>
+    <form class="form-inline">
+        <label class="pr-2" for="minDate">Min Date</label>
+        <input class="form-control mr-sm-2" type="date" name="minDate" value="@ViewData["minDate"]">
+        <label class="pr-2" for="maxDate">Max Date</label>
+        <input class="form-control mr-sm-2" type="date" name="maxDate" value="@ViewData["maxDate"]">
+        <button class="btn btn-secondary my-2 my-sm-0 " type="submit">filter</button>
+
+
+    </form>
+</nav>
+
+<div class="card">
+        <h3 class="card-header">Total sales = @Model.Sum(obj => obj.Amount).ToString("F2")</h3>
+    <div class="card-body">
+        <table class="table table-dark table-striped table-bordered table-hover">
+            <thead class="thead-dark">
+                <tr class="success">
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Seller)
+                    </th >
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Seller.Department)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Amount)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        
+                        <th scope="row">
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </th>
+                        <th>
+                            @Html.DisplayFor(modelItem => item.Date)
+                        </th>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Department.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Amount)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
