--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -21,7 +21,7 @@
 </nav>
 
 <div class="card">
-        <h3 class="card-header">Total sales = @Model.Sum(obj => obj.Amount).ToString("F2")</h3>
+        <h3 class="card-header">Total sales = @Model.Sum(obj => obj.Amount).ToString("C")</h3>
     <div class="card-body">
         <table class="table table-dark table-striped table-bordered table-hover">
             <thead class="thead-dark">
